--- a/src/main/resources/static/css/root.css
+++ b/src/main/resources/static/css/root.css
@@ -7,7 +7,7 @@ a:hover {
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: #333;
+  color: #00b5ef;
   text-shadow: none;
   background-color: #fff;
   border: .05rem solid #fff;
@@ -16,7 +16,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background-color: #a5d8f6;
 }
 
 body {
