--- a/src/main/resources/static/css/root.css
+++ b/src/main/resources/static/css/root.css
@@ -1,83 +1,84 @@
+/* root.css */
 a,
 a:focus,
 a:hover {
-  color: #fff;
+    color: #fff;
 }
 
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: #00b5ef;
-  text-shadow: none;
-  background-color: #fff;
-  border: .05rem solid #fff;
+    color: #0be;
+    text-shadow: none;
+    background-color: #fff;
+    border: .05rem solid #fff;
 }
 
 html,
 body {
-  height: 100%;
-  background-color: #a5d8f6;
+    height: 100%;
+    background-color: #adf;
 }
 
 body {
-  display: -ms-flexbox;
-  display: flex;
-  color: #fff;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+    display: -ms-flexbox;
+    display: flex;
+    color: #fff;
+    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
 .rootContainer {
-  max-width: 42em;
+    max-width: 42em;
 }
 
 .masterHeader {
-  margin-bottom: 2rem;
+    margin-bottom: 2rem;
 }
 
 .masterHeaderBrand {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .masterHeaderNav .navLink {
-  padding: .25rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, .5);
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
+    padding: .25rem 0;
+    font-weight: 700;
+    color: rgba(255, 255, 255, .5);
+    background-color: transparent;
+    border-bottom: .25rem solid transparent;
 }
 
 .masterHeaderNav .navLink:hover,
 .masterHeaderNav .navLink:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+    border-bottom-color: rgba(255, 255, 255, .25);
 }
 
 .masterHeaderNav .navLink + .navLink {
-  margin-left: 1rem;
+    margin-left: 1rem;
 }
 
 .masterHeaderNav .active {
-  color: #fff;
-  border-bottom-color: #fff;
+    color: #fff;
+    border-bottom-color: #fff;
 }
 
 @media (min-width: 48em) {
-  .masterHeaderBrand {
-    float: left;
-  }
-  .masterHeaderNav {
-    float: right;
-  }
+    .masterHeaderBrand {
+        float: left;
+    }
+    .masterHeaderNav {
+        float: right;
+    }
 }
 
 .root {
-  padding: 0 1.5rem;
+    padding: 0 1.5rem;
 }
 .root .btn-lg {
-  padding: .75rem 1.25rem;
-  font-weight: 700;
+    padding: .75rem 1.25rem;
+    font-weight: 700;
 }
 
 .masterFooter {
-  color: rgba(255, 255, 255, .5);
+    color: rgba(255, 255, 255, .5);
 }
